lbdb (0.25.2) unstable; urgency=low

  * New version (1.10) of lbdb.el by Dave Pearson <davep@davep.org>:
    Fixes the fact that, when in an emacs that doesn't have
    `line-{beginning,end}-position' available (xemacs, for example) I
    wasn't defining fully compatible versions.
  * Add short description to mutt_ldap_query in NAME section.

 --

lbdb (0.25.1) unstable; urgency=low

  * Add ">" to pod2man call in Makefile, because older versions of perl
    come with a pod2man which dies otherwise.

 -- Roland Rosenfeld <roland@debian.org>  Tue, 24 Jul 2001 17:47:16 +0200

lbdb (0.25) unstable; urgency=low

  * Suggest mutt-ja as an alternative to mutt, because mutt-ja currently
    does not provide mutt (Closes: #85923).
  * Add m_ldap and mutt_ldap_query provided by Marc de Courville,
    <marc@courville.org>.
  * Fix problem in mutt_ldap_query, which ignored the content of the
    config file before.
  * Remove <> from email address in mutt_ldap_query output.
  * lbdb-munge didn't honor SORT_OUTPUT when called from m_inmail, so
    export this variable in m_inmail (Closes: #92767).
  * Module m_nispasswd added by Utz-Uwe Haus <haus@uuhaus.de>.
  * Added variable MAIL_DOMAIN_NAME to override other settings of mail
    domain.
  * Change Build-Dependency to debhelper >=2.0.103, which is needed for
    dh_installlogrotate (Closes: #94471).
  * Replace dh_testversion by versioned build-depends.
  * Upgrade to Standards-Version 3.5.2 (no changes).
  * Depend on mawk | awk to give apt a default.

 -- Roland Rosenfeld <roland@debian.org>  Sun, 22 Jul 2001 20:04:34 +0200

lbdb (0.24) unstable; urgency=low

  * Add new module m_bbdb to access a (X)Emacs big brother database (bbdb)
    from lbdb using (x)emacs as the backend.  Thanks to Utz-Uwe Haus
    <haus@uuhaus.de> for providing this.
  * s/MODULE_PATH/MODULES_PATH/ in documentation to match the behavior of
    the program (Closes: #83933).
  * m_gpg: stop using --with-colons, because this outputs utf8 instead of