@@ -142,6 +142,12 @@ if test "x$NISCAT" != xno ; then
 	AC_SUBST(NISCAT)
 fi
 
+AC_PATH_PROG(GETENT, getent, "no")
+if test "x$GETENT" != xno ; then
+	MODULES="$MODULES m_getent"
+	AC_SUBST(GETENT)
+fi
+
 AC_PATH_PROG(GPG, gpg, "no")
 if test "x$GPG" != xno ; then
 	MODULES="$MODULES m_gpg"
